examples/core/errors/syntax_recovery/01_trailing_operator.core.tao
// Syntax Recovery: Incomplete application
// The parser should handle incomplete function application
// and report an error for the unexpected end of input
x(
